tags/2013-08-29_cppreference/Archive/31363d906691177c5e0ddadac14bd7c9-d6c803482d553f395422ddf5510f4bb0/output
main.cpp: In function ‘int main()’:
main.cpp:22:19: error: ‘ne’ was not declared in this scope
     char* chars = ne wchar[count + 1];
                   ^
main.cpp:28:5: error: ‘wstd’ has not been declared
     wstd::cout << chars << std::endl;
     ^
